test-cases/negative/test_069_invalid_type_conversion.lay
# negative test: invalid type conversion
# expected: type checker should catch this

the variable x of type String is 'hello'
the variable y of type Number is convert x to Number


